trivial: Fix alignment of the upgrade banner buttons

--- a/src/gtk-style.css
+++ b/src/gtk-style.css
@@ -279,7 +279,7 @@ button.star, .button.star {
 .upgrade-banner {
 	background-color: #1c5288;
 	border-radius: 14px;
-	padding: 16px;
+	padding: 18px;
 	color: @theme_selected_fg_color;
 }
 
